update google fonts import

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <title>Visualizing NYC's Open Datasets</title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=Exo:400,700' rel='stylesheet' type='text/css'>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
