--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </div>
   </div>
 
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://d3js.org/d3.v3.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/nycforce.js"></script>
 </body>
 
