--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div id="tweet">
         <a href="https://twitter.com/share" class="twitter-share-button"
-          data-url="http://www.chriswhong.com/nycopendata" data-text="Visualizing NYC's Open Data Portal"
+          data-url="https://www.chriswhong.com/nycopendata" data-text="Visualizing NYC's Open Data Portal"
           data-via="chris_whong" data-hashtags="nycopendata">Tweet</a>
         <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
       </div>
@@ -62,7 +62,7 @@
         York City</a>. It is a force-directed graph generated with the charting library d3.js. NYC's open data portal
       runs on the Socrata platform, and this visualization was created using the <a
         href="https://data.cityofnewyork.us/Other/NYC-OpenData-Catalog/tdsx-cvye/about">"dataset of datasets"</a> and
-      the <a href="http://dev.socrata.com/">Socrata Open Data API (SODA)</a>.<br /><br />
+      the <a href="https://dev.socrata.com/">Socrata Open Data API (SODA)</a>.<br /><br />
 
       Why? The point is to show the scale of the portal, and to illustrate which datasets have user-created views. In
       the future, it would be great to dynamically size the circles by the popularity of the datasets.<br /><br />
